--- a/.gitignore
+++ b/.gitignore
@@ -204,3 +204,6 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+#Something for Unity
+/[Aa]rtifacts/*
